--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -63,7 +63,9 @@
         margin-right: auto;
 
         .nav-one {
-            margin-left: 10px; display: flex; align-items: center;
+            margin-left: 10px; 
+            display: flex; 
+            align-items: center;
           }
 
     } 
