--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -67,7 +67,7 @@ max-width: 1920px;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 20px 50px 0px  #3C3C3B12;
-    background-image: url(/assets/image_1.png);
+    background-image: url("/assets/image_1.png");
     background-repeat: no-repeat;
     overflow: hidden;
     background-position-y: bottom;
@@ -133,7 +133,7 @@ max-width: 1920px;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 20px 50px 0px  #3C3C3B12;
-    background-image: url(/assets/image_2.png);
+    background-image: url("/assets/image_2.png");
     background-repeat: no-repeat;
     overflow: hidden;
     background-position-y: bottom;
@@ -147,7 +147,7 @@ max-width: 1920px;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 20px 50px 0px  #3C3C3B12;
-    background-image: url(/assets/image_3.png);
+    background-image: url("/assets/image_3.png");
     background-repeat: no-repeat;
     overflow: hidden;
     background-position-y: bottom;
@@ -160,7 +160,7 @@ max-width: 1920px;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 20px 50px 0px  #3C3C3B12;
-    background-image: url(/assets/image_4.png);
+    background-image: url("/assets/image_4.png");
     background-repeat: no-repeat;
     overflow: hidden;
     background-position-y: bottom;
@@ -173,7 +173,7 @@ max-width: 1920px;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 20px 50px 0px  #3C3C3B12;
-    background-image: url(/assets/image_5.png);
+    background-image: url("/assets/image_5.png");
     background-repeat: no-repeat;
     overflow: hidden;
     background-position-y: bottom;
@@ -294,7 +294,7 @@ max-width: 1920px;
     text-align: left;
     background-repeat: no-repeat;
     overflow: hidden;
-    background-image: url(/assets/image_13.png);
+    background-image: url("/assets/image_13.png");
     position: relative;
     background-position: 20px 20px;
     box-shadow: 0px 20px 50px 0px #12112714;
@@ -319,6 +319,8 @@ max-width: 1920px;
     display: flex;
     justify-content: space-between;
     padding-bottom: 33px;
+    background: linear-gradient(90deg, #F6F6F6 0%, #F6F6F6 100%);
+
   }
 
   .more-text {
@@ -352,7 +354,8 @@ max-width: 1920px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 34px;
+    padding-bottom: 28px;
+    padding-top: 56px;
   }
 
   .text-new__left {
@@ -385,143 +388,8 @@ max-width: 1920px;
     text-align: left;
     background-repeat: no-repeat;
     overflow: hidden;
-    background-image: url(/assets/image_13.png);
+    background-image: url("/assets/image_13.png");
     box-shadow: 0px 20px 50px 0px #12112714;
     position: relative;
     background-position: 20px 20px;
-  }
-  
-  .bot {
-    background-color: #4b565e;
-    margin: auto;
-    max-width: 1320px;
-    padding: 0 300px;
-
-    .footer_cont {
-      height: 373px;
-      background-color: #4b565e;
-      padding: 35px 0;
-      display: flex;
-      justify-content: space-between;
-    
-      .footer_left {
-        img {
-          margin-bottom: 32px;
-        }
-  
-        .contacts_footer {
-          display: flex;
-          justify-content: space-between;
-  
-          .footer_phone {
-            span {
-              color: #ffffff99;
-              font-size: 12px;
-              margin-left: 15px;
-            }
-  
-            p {
-              color: white;
-              margin-left: 46px;
-            }
-          }
-  
-          .footer_mail {
-            margin-left: 30px;
-  
-            span {
-              color: #ffffff99;
-              font-size: 12px;
-              margin-left: 15px;
-            }
-  
-            p {
-              color: white;
-              margin-left: 46px;
-            }
-          }
-        }
-  
-        .last_text {
-          display: flex;
-          justify-content: space-between;
-          margin-top: 85px;
-          width: 250px;
-  
-          span {
-            color: white;
-            font-size: 14px;
-            font-weight: 400;
-            cursor: pointer;
-          }
-        }
-  
-        .footer_icons {
-          display: flex;
-          margin-top: 30px;
-  
-          img {
-            margin-right: 20px;
-            height: 25px;
-            cursor: pointer;
-          }
-        }
-      }
-  
-      .footer_right {
-        width: 534px;
-  
-        h3 {
-          color: white;
-        }
-  
-        span {
-          color: #ffffff99;
-          font-weight: 400;
-          font-size: 14px;
-          line-height: 28px;
-        }
-  
-        input {
-          width: 472px;
-          height: 42px;
-          margin-top: 32px;
-          border: 1px solid #f0ba4e;
-          border-radius: 25px;
-          background-color: #4b565e;
-          padding-left: 50px;
-          color: white;
-        }
-  
-        img {
-          position: relative;
-          top: -35px;
-          left: 20px;
-        }
-  
-        button {
-          padding: 12px 20px;
-          position: relative;
-          top: -41px;
-          left: 413px;
-          border-radius: 30px;
-          color: white;
-          background-color: #f0ba4e;
-          border: none;
-          cursor: pointer;
-          font-size: 10px;
-        }
-  
-        p {
-          color: #ffffff99;
-          font-size: 14px;
-          margin-top: 110px;
-          text-align: end;
-        }
-      }
-    }
-  }
-
-  .indent {
-    padding-bottom: 50px;
   }
