--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -2,11 +2,7 @@
     <b>КОМПОНЕНТ СПИСКА ЮЗЕРОВ</b>
 </div>
 <div class="list">
-    <div *ngFor="let item of users" class="list-cards">
-        <p> {{$any(item).name}}</p>
-        <p>{{$any(item).email}}</p>
-        <p> {{$any(item).website}}</p>
-        <p> {{$any(item).company.name}}</p>
-        <button (click)="deleteUser(item.id)" class="key">УДАЛИТЬ ЮЗЕРА</button>
+    <div *ngFor="let item of users">
+        <app-user-card [user]="item" (deleteUser)="deleteUser($event)"></app-user-card>
     </div>
 </div>
