--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,7 @@
     </nav>
     <button (click)="isShowCatalog=!isShowCatalog">Срыть/Показать Каталог</button>
     <button (click)="changeMenuText()">Изменить текст</button>
+    <button routerLink="todos">Админка</button>
   </div>
   <div class="header-right">
     <img class="header-Phone" src="assets/Phone.svg" alt="трубка">
