--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -2,7 +2,7 @@
     <b>КОМПОНЕНТ СПИСКА ЮЗЕРОВ</b>
 </div>
 <div class="list">
-    <div *ngFor="let item of users">
-        <app-user-card [user]="item" (deleteUser)="deleteUser($event)"></app-user-card>
+    <div *ngFor="let user of usersService.users$ | async">
+        <app-user-card [user]="user" (deleteUser)="deleteUser($event)"></app-user-card>
     </div>
 </div>
