--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,6 +1,4 @@
-<div class="inscription">
-    <b>КОМПОНЕНТ СПИСКА ЗАДАЧ</b>
-</div>
+<app-create-todo-form (createTodo)="createTodo($event)"></app-create-todo-form>
 <div class="list">
     <div *ngFor="let todo of todosService. todos$ |async">
         <app-todo-card [todo]="todo" (deleteTodo)="deleteTodo($event)"></app-todo-card>
