--- a/src/app/components/todos/todo-card/todo-card.component.html
+++ b/src/app/components/todos/todo-card/todo-card.component.html
@@ -1,7 +1,7 @@
 <div class="list-cards">
-    <p>ТЕКСТ ЗАДАЧИ</p>
+    <p>ТЕКСТ ЗАДАЧИ:</p>
     <div>{{todo.title}}</div>
-    <p>АВТОР ЗАДАЧИ</p>
+    <p>АВТОР ЗАДАЧИ:</p>
     <div>{{todo.userId}}</div>
     <p>ЗАДАЧА ЗАВЕРШЕНА:</p>
     <div>{{todo.completed ? 'ДА' : 'НЕТ'}}</div>
