--- a/src/app/components/create-user-form/create-user-form.component.html
+++ b/src/app/components/create-user-form/create-user-form.component.html
@@ -1,27 +1,28 @@
 <div class="inscription">
     <h1>CREATE USER FORM</h1>
-    <form class="form" [formGroup]="form" (ngSubmit)="submitForm()">
-        <p>NAME:</p>
-        <input type="text"  class ="form-input" formControlName = "name">
-        <div *ngIf="form.controls['name'].invalid && (form.controls['name'].dirty || form.controls['name'].touched)" class="alert">
-            <div *ngIf="form.controls['name'].errors">ИМЯ ВВЕДЕНО НЕПРАВИЛЬНО</div>
-        </div>
-        <p>EMAIL:</p>
-        <input type="text"  class ="form-input" formControlName = "email">
-        <div *ngIf="form.controls['email'].invalid && (form.controls['email'].dirty || form.controls['email'].touched)" class="alert">
-            <div *ngIf="form.controls['email'].errors">EMAIL ВВЕДЕН НЕПРАВИЛЬНО</div>
-        </div>
-        <p>WEBSITE:</p>
-        <input type="text"  class ="form-input" formControlName = "website">
-        <div *ngIf="form.controls['website'].invalid && (form.controls['website'].dirty || form.controls['website'].touched)" class="alert">
-            <div *ngIf="form.controls['website'].errors">WEBSITE ВВЕДЕН НЕПРАВИЛЬНО</div>
-        </div>
-        <p>COMPANY NAME:</p>
-        <input type="text"  class ="form-input" formControlName = "companyName">
-        <div *ngIf="form.controls['companyName'].invalid && (form.controls['companyName'].dirty || form.controls['companyName'].touched)" class="alert">
-            <div *ngIf="form.controls['companyName'].errors">ИМЯ КОМПАНИИ ВВЕДЕНО НЕПРАВИЛЬНО</div>
-        </div>
-        <button class="user" [disabled]="form.invalid">CREATE USER</button>
-    </form> 
+    <form class="form" [formGroup]="form">
+        <mat-form-field>
+            <mat-label>NAME:</mat-label>
+            <input matInput formControlName="name">
+            <mat-error>Некорректное значение</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>EMAIL:</mat-label>
+            <input matInput formControlName="email">
+            <mat-error>Некорректное значение</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>WEBSITE:</mat-label>
+            <input matInput formControlName="website">
+            <mat-error>Некорректное значение</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>COMPANY NAME:</mat-label>
+            <input matInput formControlName="companyName">
+            <mat-error>Некорректное значение</mat-error>
+        </mat-form-field>
+        <button type="submit" (click)="submitForm()" matIconSuffix mat-raised-button [disabled]="form.invalid">Add User
+            <mat-icon>add</mat-icon>
+        </button>
+    </form>
 </div>
-
