--- a/src/styles.scss
+++ b/src/styles.scss
@@ -352,3 +352,5 @@ template {
 body {
 font-family: Inter;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
