--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,7 +1,10 @@
-<app-create-todo-form (createTodo)="createTodo($event)"></app-create-todo-form>
+
+<app-button-create-todo-form (createTodo)="createTodo($event)"></app-button-create-todo-form>
 <div class="list">
     <div *ngFor="let todo of todosService. todos$ |async">
-        <app-todo-card [todo]="todo" (deleteTodo)="deleteTodo($event)"></app-todo-card>
+        <app-todo-card [todo]="todo" (deleteTodo)="deleteTodo($event)"
+        (editTodo)="editTodo($event)"
+        ></app-todo-card>
     </div>
 </div>
 
