--- a/src/app/components/users/user-card/user-card.component.html
+++ b/src/app/components/users/user-card/user-card.component.html
@@ -3,8 +3,6 @@
     <p>{{user.email}}</p>
     <p> {{user.website}}</p>
     <p> {{user.company.name}}</p>
-    <button (click)="onDeleteUser(user.id)" class="key">УДАЛИТЬ ЮЗЕРА</button>
+    <button (click)="openDeleteDialog()" class="key">delete</button>
+    <button (click)="openDialog()" class="key">edit</button>
 </div>
-
-
-
