--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,7 +1,8 @@
-
-<app-create-user-form (createUser)="createUser($event)"></app-create-user-form>
+<app-button-create-user-form (createUser)="createUser($event)"></app-button-create-user-form>
 <div class="list">
     <div *ngFor="let user of usersService.users$ | async">
-        <app-user-card [user]="user" (deleteUser)="deleteUser($event)"></app-user-card>
+        <app-user-card [user]="user" (deleteUser)="deleteUser($event)"
+        (editUser)="editUser($event)"
+        ></app-user-card>
     </div>
 </div>
