--- a/src/app/components/todos/todo-card/todo-card.component.html
+++ b/src/app/components/todos/todo-card/todo-card.component.html
@@ -5,5 +5,6 @@
     <div>{{todo.userId}}</div>
     <p>ЗАДАЧА ЗАВЕРШЕНА:</p>
     <div>{{todo.completed ? 'ДА' : 'НЕТ'}}</div>
-    <button (click)="onDeleteTodo(todo.id)" class="key">УДАЛИТЬ ЗАДАЧУ</button>
+    <button (click)="openDeleteDialog()" class="key">delete</button>
+    <button (click)="openDialog()"class="key">edit</button>
 </div>
