--- a/src/app/components/todos/todo-card/todo-card.component.html
+++ b/src/app/components/todos/todo-card/todo-card.component.html
@@ -1,6 +1,6 @@
 <div class="list-cards">
     <p>ТЕКСТ ЗАДАЧИ:</p>
-    <div>{{todo.title}}</div>
+    <div>{{todo.title | truncate}}</div>
     <p>АВТОР ЗАДАЧИ:</p>
     <div>{{todo.userId}}</div>
     <p>ЗАДАЧА ЗАВЕРШЕНА:</p>
