--- a/src/app/components/users/edit-user-dialog/edit-user-dialog.component.html
+++ b/src/app/components/users/edit-user-dialog/edit-user-dialog.component.html
@@ -11,6 +11,11 @@
             <mat-error>Некорректное значение</mat-error>
         </mat-form-field>
         <mat-form-field>
+            <mat-label>PHONE:</mat-label>
+            <input matInput formControlName="phone">
+            <mat-error>Некорректное значение</mat-error>
+        </mat-form-field>
+        <mat-form-field>
             <mat-label>WEBSITE:</mat-label>
             <input matInput formControlName="website">
             <mat-error>Некорректное значение</mat-error>
