--- a/src/app/components/users/user-card/user-card.component.html
+++ b/src/app/components/users/user-card/user-card.component.html
@@ -1,7 +1,8 @@
 <div class="list-cards">
-    <p> {{user.name}}</p>
-    <p>{{user.email}}</p>
-    <p> {{user.website}}</p>
+    <p> {{user.name | customUpperCase}}</p>
+    <p>{{user.email | customUpperCase}}</p>
+    <p>{{user.phone  | removeDashes}}</p>
+    <p> {{user.website | customUpperCase}}</p>
     <p> {{user.company.name}}</p>
     <button (click)="openDeleteDialog()" class="key">delete</button>
     <button (click)="openDialog()" class="key">edit</button>
