--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,11 +14,11 @@
 
   </div>
   <div class="header-right">
-    <p class="date">Дата: {{currentDate | date:'medium'}}</p>
+    <p class="date">{{currentDate | date:'medium'}}</p>
     <img class="header-Phone" src="assets/Phone.svg" alt="трубка">
     <a class="phone-nav" href="tel:+79196414039">+7 (965) 084-29-29</a>
     <img class="header-heart" src="assets/heart 1.svg" alt="сердечько">
-    <button class="one">
+    <button class="one" appHighlight>
       <img src="assets/Mask group.svg" alt="корзина">
       <span class="nav-one">Пусто</span>
     </button>
