--- a/src/app/components/todos/button-create-todo-form/button-create-todo-form.component.html
+++ b/src/app/components/todos/button-create-todo-form/button-create-todo-form.component.html
@@ -1,1 +1,2 @@
-<button mat-mini-fab color="primary" class="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
+<button matTooltip = "Добавить данные пользователя"
+     mat-mini-fab color="primary" class="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
