--- a/src/app/components/users/button-create-user-form/button-create-user-form.component.html
+++ b/src/app/components/users/button-create-user-form/button-create-user-form.component.html
@@ -1,1 +1,4 @@
-<button mat-mini-fab color="primary" class="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
+<button  matTooltip = "Создать нового пользователя"
+    mat-mini-fab color="" class="button" (click)="openDialog()" appHighlight>
+    <mat-icon>add
+</mat-icon></button>
