--- a/src/app/components/users/user-card/user-card.component.scss
+++ b/src/app/components/users/user-card/user-card.component.scss
@@ -1,21 +1,19 @@
-
-
-    .list-cards {
-        width: 250px;
-        height: 250px;
-        margin: 5px;
-        padding: 15px;
-        box-shadow: 0px 20px 50px 0px #12112714;
-        border: 1px solid #e5e5e5; 
-    }
+.list-cards {
+    width: 280px;
+    height: 280px;
+    margin: 5px;
+    padding: 5px;
+    // box-shadow: 0px 20px 50px 0px #12112714;
+    border: 1px solid #e5e5e5;
+}
 
 
 
 .key {
-    padding: 10px 15px;
+    padding: 20px 25px;
     border-radius: 50px;
-    border: 1px solid #F0BA4E;
+    border: 1px solid #e5e5e5;
     background-color: white;
     margin-left: 23px;
-    transform: translateY(+12px);
+    transform: translateY(+12px); 
 }
