--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div class="but">
-  <button (click)="isShowImg=!isShowImg">Скрыть/Показать фото</button>
+  <button (click)="isShowImg=!isShowImg" class="button">Скрыть/Показать фото</button>
 </div>
 <div class="baner">
   <div *ngIf="isShowImg">
