--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -22,6 +22,11 @@
   background-color: #4B565E;
 }
 
+.button {
+  color: #fff;
+  background-color: #4B565E;
+  border: none;
+}
 
 .baner {
 max-width: 1920px;
