--- a/src/app/components/todos/create-todo-form/create-todo-form.component.html
+++ b/src/app/components/todos/create-todo-form/create-todo-form.component.html
@@ -17,7 +17,7 @@
         <input matInput formControlName="completed">
         <mat-error>Ответ некорректен</mat-error>
       </mat-form-field>
-      <button matTooltip = "Добавить данные пользователя"
+      <button matTooltip = "Добавить задачу"
         type="submit" (click)="submitForm()" matIconSuffix mat-raised-button [disabled]="form.invalid">Add Todo
         <mat-icon>add</mat-icon>
     </button>
