--- a/src/app/components/users/button-create-user-form/button-create-user-form.component.html
+++ b/src/app/components/users/button-create-user-form/button-create-user-form.component.html
@@ -1,4 +1,3 @@
 <button  matTooltip = "Создать нового пользователя"
-    mat-mini-fab color="" class="button" (click)="openDialog()" appHighlight>
-    <mat-icon>add
-</mat-icon></button>
+    mat-mini-fab color="" class="button" (click)="openDialog()" appHighlight><mat-icon>add</mat-icon></button>
+
