--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -72,6 +72,16 @@
 
 }
 
+.admin {
+    border-radius: 25px; 
+    background-color: #4B565E;
+    color: white;
+    padding: 10px;
+    border: 1px solid #F0BA4E;
+    width: 80px;
+    margin-left: 10px;
+}
+
 .date {
     margin: 0px 20px 0px 0px;
 }
