--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,7 +1,7 @@
 
 <app-button-create-todo-form (createTodo)="createTodo($event)"></app-button-create-todo-form>
 <div class="list">
-    <div *ngFor="let todo of todosService. todos$ |async">
+    <div *ngFor="let todo of  todos$ |async">
         <app-todo-card [todo]="todo" (deleteTodo)="deleteTodo($event)"
         (editTodo)="editTodo($event)"
         ></app-todo-card>
